// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelConfirm renders CANCEL modal 1`] = `
<ForemanModal
  id="cancelConfirmModal"
  title="Cancel Selected Tasks"
>
  <Component />
  This will cancel 1 task(s), putting them in the stopped state. Are you sure?
  <Component>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      No
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      onClick={[Function]}
    >
      Yes
    </Button>
  </Component>
</ForemanModal>
`;

exports[`CancelConfirm renders CANCEL_SELECTED modal 1`] = `
<ForemanModal
  id="cancelSelectedConfirmModal"
  title="Cancel Selected Tasks"
>
  <Component />
  This will cancel 1 task(s), putting them in the stopped state. Are you sure?
  <Component>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      No
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      onClick={[Function]}
    >
      Yes
    </Button>
  </Component>
</ForemanModal>
`;
